// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";


package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  // Sends another greeting
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}

  rpc AddMessage (Request_message) returns (Response_message) {}

}
service Command {

  rpc LightsOn (Request) returns (Reply) {}
 
  rpc LightsOff (Request) returns (Reply) {}

  rpc MoveHome (Request) returns (Reply) {}
}

message Request {
  string CommandType = 1;
  string OpCode = 2;
  string Dataa = 3;
  string Options = 4;
}

message Reply {
  string message = 1;
}
// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}


// The request message containg the comand's attribute
message Request_message {
  string MessageType = 1;
  string OpCode = 2;
  string Dataa = 3;
  string Options = 4;
}

message Response_message {
  string message = 1;
}

